# hashcsrt

./: Cargo.toml  README.md  build.rs  exemplo_vb6.bas
.cargo/: config.toml
src/: lib.rs
